同步于: 12月7日10时2分

--- a/pages/p6/948936.md
+++ b/pages/p6/948936.md
@@ -1,4 +1,4 @@
-### 北宋皇帝亲自出6道题 难倒无数才子(组图)
+### 【帝尧的故事】之八：奉诏除封豨(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="宋徽宗绘《唐十八学士》局部" src="https://img2.secretchina.com/pic/2019/6-25/p2454151a458442205-ss.jpg"/>
+  <img alt="这三个人见到陶唐侯的报捷表文，驩兜就说：“陶唐侯居然能够杀了猰貐，以后威名愈大，这可怎么办？”" src="https://img3.secretchina.com/pic/2020/10-27/p2805111a683517202-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   宋徽宗是画家，是诗人，是书法家。图为宋徽宗绘《唐十八学士》局部。（图片来源：国立故宫博物院）
+   这三个人见到陶唐侯的报捷表文，驩兜就说：“陶唐侯居然能够杀了猰貐，以后威名愈大，这可怎么办？”（绘图：Winnie Wang/看中国）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,46 +29,39 @@
   </div>
  </div>
  <p>
-  对于
+  上集我们讲到老将
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/宋徽宗" target="_blank">
-    宋徽宗
+   <span href="https://www.secretchina.com/news/gb/tag/羿" target="_blank">
+    羿
    </span>
   </strong>
-  ，他作为
-  <strong>
-   皇帝
-  </strong>
-  丢了江山，并非明君所为，这是他的失败。而如果作为一个普通人，他又是那么的迷人。
+  带着徒弟逢蒙等杀死了猰貐（ㄧㄚˋ ㄩˇ，yà yǔ）这个怪兽。羿等归国之后，陶唐侯慰劳一番，随即拜表到帝挚处覆命。这时帝挚在位六年，将朝廷政务都托付在驩兜、孔壬、鲧三个人身上。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  我们都知道，除却君王，他是画家，是诗人，是书法家，是运动员，甚至是一个完美的情人，父辈打下来的江山正值盛世，国泰民安，他倒也简单天真，顺势把全部的心思用在了自己热爱的事情上，
-  <span href="https://www.secretchina.com/news/gb/tag/赵佶" target="_blank">
-   赵佶
+  这三个人见到陶唐侯的报捷表文，驩兜就说：“陶唐侯居然能够杀了猰貐，以后威名愈大，这可怎么办？”
+ </p>
+ <p>
+  孔壬道：“不要紧，前日我接到四方报告，作乱的人正多着呢。东方有大风，占据沿海一带；西方有九婴，占据凶水之地。听说都是有非常本领的。南方更有一条妖蛇，盘踞在洞庭之野，被它吞吃的人很多，我们只要下令叫陶唐侯去翦除，陶唐侯那边所靠的不过就是一个羿，东西南北各处叫他跑起来，也尽够断送他的老命了。况且陶唐虽是个大国，也不过百里，兵役粮饷都有限，我们叫他去打仗，不给他接济，包管他坐困，岂不是好吗？”
+ </p>
+ <p>
+  果然帝挚听了驩都等人的蛊惑，降诏与陶唐侯道：“现在桑林之野生有
+  <span href="https://www.secretchina.com/news/gb/tag/封豨" target="_blank">
+   封豨
   </span>
-  过的日子应该是所有艺术家梦想中的生活。那个时代，是洋溢着墨香和浓浓的文艺范儿的。
+  (ㄒㄧ,xī)，洞庭之野藏有巴蛇，大为民害，朕甚悯之。前日少咸山猰貐汝曾迅奏肤功，朕心嘉赖。此次还是命你派兵前往诛除，以拯兆民，朕寄厚望”等语。陶唐侯接到此诏，召集臣下商议。
  </p>
  <p>
-  宋徽宗最大的举措之一便是担任了“翰林图画院”院长，放着
-  <span href="https://www.secretchina.com/news/gb/tag/皇帝" target="_blank">
-   皇帝
+  羿道：“可怪现在天下都是一班畜生在那里搅扰祸害，真是从古没有的。”
+ </p>
+ <p>
+  <span href="https://www.secretchina.com/news/gb/tag/务成子" target="_blank">
+   务成子
   </span>
-  不当，兢兢业业地当起美术教授，编写教材，亲自授课，培养美术人才。
- </p>
- <p>
-  为了把最优秀的人才吸收到画院，徽宗建立考试制度，正式纳入科举考试之中，称“绘画试”。分佛道、人物、山水、鸟兽、花竹、屋木六科，摘古人诗句作为考题，要求考生画出诗句的意境，构思巧妙，不落俗套，做到笔意俱全。
- </p>
- <p>
-  不仅如此，宋徽宗还亲自出考题，亲自主考，亲自批卷，专业素质、创新意识考查样样不落下，综合素质过硬才能被录取进入画院。
- </p>
- <p>
-  <strong>
-   考题一：野渡无人舟自横
-  </strong>
+  道：“大凡天下大乱的时候，割据地方、为民祸害的有两种：一种真是畜生，吃人害命，就是这种封豨、巴蛇之类；还有一种似人非人，但是只为自己争权夺利算计，心中全无百姓，使百姓大受其害。这种人，将来还要仰仗老将的大力去驱除他们，一则为天下造福，二则为真王树德，区区封豨、长蛇，还不过极小的事呢。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -83,7 +76,7 @@
   </div>
  </center>
  <p>
-  此题取自唐朝诗人韦应物的《滁州西涧》。应试者大多画一空舟系于涧边，或者画一鹭鸶立于船上，或者画一鸟落在船杆……
+  陶唐侯道：“现在此事自然非司衡不可，请司衡不要怕辛苦，为百姓走一遭。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +91,7 @@
   </div>
  </center>
  <p>
-  受到赵佶赏识的却是这样一幅画面，一个卧于船头的船夫，寂寞失落，百无聊赖。作者意在说明此水无人过渡，连摆渡之人也无聊，打起瞌睡来。既突出无乘客，又突出无人“渡”，紧扣诗句。
+  羿听了亦不推辞，正要站起来，务成子忙止住道：“且慢且慢，某知道老将有神弓神箭，除灭封豨是极容易的，但是那巴蛇却非封豨之比。它有毒气，喷出来很是难当，还须有防备才好。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +106,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   考题二：踏花归去马蹄香
-  </strong>
+  羿道：“那么怎样呢？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +121,7 @@
   </div>
  </center>
  <p>
-  这个题目也是独具匠心的。如何表现“踏花归来马蹄香”中的“香”？
+  务成子道：“当初黄帝的时候，贫丘地方有很多灵药，但那地方却有很多毒蛇，黄帝屡次想去，去不了。后来听了广成子的话，随行的人个个都带雄黄，那些毒蛇方都远远避开，可见得制伏毒蛇全靠雄黄。所以老将此去，必须多备雄黄。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +136,7 @@
   </div>
  </center>
  <p>
-  考生们抓耳挠腮，煞费苦心：“香”是抽象的，只能用鼻子闻到，不能用眼睛看到，怎么画出来？
+  羿问道：“哪里可以弄到雄黄呢？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +151,7 @@
   </div>
  </center>
  <p>
-  有的画家绞尽了脑汁，在“踏花”二字上下功夫，画面上画了许许多多的花瓣儿，一个人骑着马在花瓣儿上行走，表现出游春的意思；有的画家煞费苦心在“马”字上下功夫，画面上的主体是一位跃马扬鞭的少年，在黄昏疾速归来；有的画家运思独苦，在“蹄”字上下功夫，在画面上画了一只大大的马蹄子，特别醒目。
+  务成子说：“西方山中，尤其是武都山谷中所出的颜色像鸡冠的黄色的，品质最好。处在山的阳面的为雄雄黄，山的阴面的为雌雄黄。雄的才好。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -175,7 +166,7 @@
   </div>
  </center>
  <p>
-  赵佶看了，都很不满意。
+  陶唐侯道：“那么先派人到武都去采办，如何？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -190,7 +181,7 @@
   </div>
  </center>
  <p>
-  只有一位画家独具匠心，他不是单纯着眼于诗句中的个别词，而是在全面体会诗句含义的基础上着重表现诗句末的“香”字。他的画面是：在一个夏天的落日近黄昏的时刻，一个游玩了一天的官人骑着马回归乡里，马儿疾驰，马蹄高举，几只蝴蝶追逐着马蹄蹁跹飞舞。
+  务成子道：“现在恐怕有点难，因为那边新近出一种怪物，名叫九婴，专是陷害人民，采办雄黄的人决不能通过去呢！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -205,7 +196,7 @@
   </div>
  </center>
  <p>
-  这位考生当然这脱颖而出，以榜首的位置入选画院。
+  羿道：“那怎么办？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -220,9 +211,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   考题三：竹锁桥边卖酒家
-  </strong>
+  务成子道：“依某愚见，老将此刻先去剿封豨，一面由陶唐候申告朝廷，说明要除巴蛇，非先得到武都山的雄黄不可，要往武都山取雄黄，非先剿灭那边的九婴不可，且看朝廷办法如何，再行定见吧。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -237,7 +226,7 @@
   </div>
  </center>
  <p>
-  这是画院的著名试题之一。众多考生皆重于酒家，以小溪流水、野渡小桥、竹林清风等藉以衬托，皆不中赵佶之意。
+  羿冷笑道：“朝廷有什么办法？不过仍旧叫我们去就是了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -252,7 +241,7 @@
   </div>
  </center>
  <p>
-  唯有一名叫李唐的画家，独辟蹊径，画了一泓溪水，小桥横卧，桥边则是一片竹林，唯有那郁郁葱葱的翠竹中，挂着一幅迎风招展的酒帘。
+  务成子道：“果然如此，老将还得一行。某刚才说过，这种民贼多着呢，老将一一去打平它，一则为天下造福，二则为真王树德，想来老将总是愿意的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -267,7 +256,7 @@
   </div>
  </center>
  <p>
-  赵佶看后大悦，认为酒家藏在竹林中正符合“锁”字的意境，亲自圈点为第一名。
+  羿听到此，连声说道：“愿意愿意，如先生所说，只要我能尽力的，无不尽力。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -282,9 +271,11 @@
   </div>
  </center>
  <p>
-  <strong>
-   考题四：深山藏古寺
-  </strong>
+  于是一面陶唐侯申奏朝廷，询问办法；一面老将羿就带了
+  <span href="https://www.secretchina.com/news/gb/tag/逢蒙" target="_blank">
+   逢蒙
+  </span>
+  和二百个兵士径向桑林而来。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -299,7 +290,7 @@
   </div>
  </center>
  <p>
-  这个题目要画好并不容易，画中的古寺要“藏”起来，又要让人觉得它是存在的。
+  原来那桑林就在菏泽的南面。一片平原，密密的都是桑树，本来当地百姓生活富足，自从来了这封豨，百姓被它吞吃了大半，其余的都逃走了。大好桑林全都荒废了。那封豨就藏在桑林里。据当地人说，这封豨是个神兽，很能变化，所以百姓用尽方法，总是捉它不得。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -314,7 +305,7 @@
   </div>
  </center>
  <p>
-  有的考生在山腰画座古庙，半遮半露，总算有“藏”的意思……
+  羿打听明白，就和逢蒙商议。逢蒙道：“既是神兽，只能用计取，不能用力攻。弟子想来，它所凭依的不过是密密桑林可作隐蔽，现在先用一把火将桑林烧尽，使它失所凭依，那么自然易于擒捉了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -329,7 +320,7 @@
   </div>
  </center>
  <p>
-  有的在丛林深处画座古庙，有的只画出庙的一角或一段残垣断壁……
+  羿道：“你的话不错。但老夫之意，这桑林是百姓之生计，统统烧去了，须有多少年不能恢复，那百姓如何过活呢？所以，还是另想办法吧。那封豨不过一个兽类，难道我们两个人还敌不过一兽吗？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -344,7 +335,7 @@
   </div>
  </center>
  <p>
-  主考官一连看了很多幅，都不满意，有一幅画深深吸引了他，他再仔细端详了一番，便连连点头称赞，说：“好，好，这才是‘魁选’之作呀！”
+  逢蒙听了不用他的计划，心中不快，但亦只能服从。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -359,7 +350,7 @@
   </div>
  </center>
  <p>
-  那幅画好在哪里呢？那位高明的画家，根本没有画庙，画的是崇山峻岭之中一股清泉飞流而下，泉边有个老态龙钟的和尚，正一瓢一瓢地舀水。就这么一个挑水的和尚，就把“深山藏古寺”的题目表现得透彻极了，把“藏”字表现出来了。
+  到了次日，羿率逢蒙一干人带了弓箭、器械和绳索等到桑林四周察看情形，正在看时，忽见前面一只比大象还大的猪，张口舞爪，狂奔而来，其势凶猛。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -374,7 +365,7 @@
   </div>
  </center>
  <p>
-  和尚挑水，当然是用来烧茶煮饭，洗衣浆衫，这就叫人想到附近一定有庙；和尚年迈，还得自己来挑水，可以想像到那庙是座破败的古庙了。庙一定是在深山中，画面上看不见，这就把“藏”字表现出来了。这幅画比起那些画庙的一角或庙的一段墙垣的，更切合“深山藏古寺”的题意。
+  羿不敢怠慢，连射两箭，逢蒙亦连射两箭，箭箭都中。但这家伙虽然身中四箭，还是直冲过来。羿和逢蒙慌忙避入林中，哪知地下尽是泥泞，两脚全陷下去，拔腿不能，难以动弹。那封豨却一头撞进来，就要吞噬。羿趁势一箭，直贯它的喉咙，那封豨长嗥数声，化道黑气，穿林而去，数十株桑树被它摧倒。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -389,9 +380,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   考题五：嫩绿枝头红一点
-  </strong>
+  这里众人赶紧过来，把羿等一一拖出泥泞。逢蒙道：“这个封豨真是神兽，为什么一道黑气就不见了？倘使它再化一道黑气而来，那么我们真危险呢！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -406,7 +395,37 @@
   </div>
  </center>
  <p>
-  “嫩绿枝头红一点”，应该还算好表达，难就难在题目还有后半句“恼人春色不须多”。如何表现这种春色不须多的境界呢？
+  羿道：“不要紧，我知道它受伤已甚重，料难为患了。”说着，就带了众人沿着桑林中的路一直追寻去，约有二里之遥。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  最后到了一个大土丘，只见土丘四面骸骨纵横，堆成小山。逢蒙道：“这里一定是它的巢穴了，我们细细搜寻吧。”忽有兵士发现一个大穴口，里面幽黑，深不见底。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  羿道：“这封豨一定藏在里面。”忙叫兵士将绳索结成一个大网，布在穴口，一面取箭向穴中射去。陡然听见狂嗥之声，就有一大物冲穴而出，众人急忙把网一收，那知封豨力大，几乎捉它不住。羿急忙又是一箭，封豨才倒下来。于是众人收了网，几十个人拖了它走。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -425,7 +444,7 @@
   </ins>
  </center>
  <p>
-  中规中矩的答案就是这样的，直接在绿叶上画了朵红花，或是一丛绿叶中露出朵红花。
+  逢蒙道：“不怕他再化黑气吗？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -440,7 +459,7 @@
   </div>
  </center>
  <p>
-  但有位画家画了绿树中里一个亭阁，一位仕女正倚栏而立，她娇艳的樱桃小口在一片绿的画面中显得明艳照人。便有一动人情思的感觉，把“一点红”的含意作了灵巧恰当的表现。不用说，这位画家凭借这一巧思脱颖而出。
+  羿道：“老夫刚才这支箭是神箭，它不能再化了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -455,9 +474,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   考题六：蝴蝶梦中家万里
-  </strong>
+  出得林外，大家休息一会，又拖到有人烟的地方。众多百姓都来围观，无不拍手称快，都道：“我们这几年被它吃去的人不知有多少了，又占据了这桑林，我们不被它吃掉，也因为没有生活，饥寒交迫的死了不知有多少了，难得陶唐侯派老将军来为我们除害，救了我们，真是感恩不浅。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -472,7 +489,7 @@
   </div>
  </center>
  <p>
-  此题取自“蝴蝶梦中家万里，杜鹃枝上月三更”，寓意很深。诗句出现“蝴蝶”、“子规（杜鹃）”、“树枝”、“明月”，表达了游子孤眠异乡的空虚寥落心情。
+  当下众人收拾这封豨的尸体，从它身上取出六支箭，都是羿和逢蒙所射的，内中一支较小，羿把它揩洗干净，收起来，说道：“这是我的神箭，将来还要用呢。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -487,7 +504,7 @@
   </div>
  </center>
  <p>
-  众考生皆不中意，唯一被选中的是王道亨的试卷。
+  逢蒙听了，问道：“这就是神箭吗？老师从哪里得来的？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -502,7 +519,7 @@
   </div>
  </center>
  <p>
-  王道亨所绘的是苏武牧羊图，画面上苏武假寐，在异国的冰天雪地中，正在打瞌睡，睡梦中一定是千万里远的家乡：林木扶疏，双蝶追逐其间，上立子规，月正当空，木影在地。犹闻啼声。王道亨较好地把握了题目的含义，一举夺魁。
+  羿道：“这是老夫幼时专心一志研炼得来的，并非仙传，亦非神授。还有一张神弓，亦是如此，可以仰射星辰。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -517,7 +534,7 @@
   </div>
  </center>
  <p>
-  以上，宋徽宗的考试方式叫“诗题取士”，这让画家们深刻领悟到了“没文化真可怕”这个道理。他们不能再死描死背地画画，而要去读书，从中锻练诗意的想像空间，以更高的层次理解绘画。
+  逢蒙道：“弟子追随老师几十年，从来没有听见老师说起过。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -532,25 +549,7 @@
   </div>
  </center>
  <p>
-  但是，你别以为考进来就完事儿了，对于考进来的画家，还得按身份分为“士流”和“杂流”，不断培训不断考核，品德智力等全面发展，再分职称。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="text-align:center">
-  <img alt="宋徽宗《蜡梅山禽图》" src="https://img2.secretchina.com/pic/2019/6-25/p2454171a579455601-ss.jpg"/>
-  <br>
-   宋徽宗《蜡梅山禽图》是迄今最早一张，“诗、书、画”都是自己原创的作品。（图片来源：国立故宫博物院）
-  </br>
+  羿道：“这不是常用之物，而且极不容易做的。老夫早想传授你，但是因你年龄太大，炼不成功，所以就不和汝说起了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -565,11 +564,7 @@
   </div>
  </center>
  <p>
-  比如宋徽宗就曾经要求画院那帮画师，让他们连孔雀要飞起来的时候，先抬左脚还是右脚，这个都要搞清楚。在这样的格物精神下，出现很多写实的画。比如，宋徽宗的《山禽腊梅图》，这张画是迄今最早一张，“诗、书、画”都是自己原创的作品。直接影响了后来一说起传统
-  <span href="https://www.secretchina.com/news/gb/tag/中国画" target="_blank">
-   中国画
-  </span>
-  就必须是“诗、书、画”的三个经典元素。
+  逢蒙听了，嘴上不说，然而因此颇疑心羿不肯尽心传授，不免有怨望之心了，这是后话不提。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -584,11 +579,7 @@
   </div>
  </center>
  <p>
-  到了公元1126年，金兵攻破汴京，将徽、钦二帝押送北方，汴京被洗劫一空，
-  <span href="https://www.secretchina.com/news/gb/tag/北宋" target="_blank">
-   北宋
-  </span>
-  灭亡，史称“靖康之耻”。
+  且说众人解剖封豨，忽然发现它的两髀（ㄅㄧˋ，bì）上各有八颗白而圆的斑点，大家不解，纷纷议论。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -603,7 +594,7 @@
   </div>
  </center>
  <p>
-  被囚禁期间，宋徽宗受尽精神折磨，写下了许多晦恨、哀怨，凄凉的诗句，“家山回首三千里，目断山南无雁飞”，这一句算是真正体会王道亨所绘苏武牧羊图的真正境界了。
+  羿道：“依此看来，这封豨真是个神兽了。老夫知道天上的星宿叫奎星的，还有一个名字叫作封豨，共总有十六颗联合而成。那奎字的意思本来是两髀间之意，因为奎星像两髀，所以取名叫作奎。现在这封豨两髀既有十六颗白点，上应奎星之精，岂不是个神兽吗？”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -618,7 +609,37 @@
   </div>
  </center>
  <p>
-  于个人，他堪称艺术家，对北宋及中国绘画发展，功不可没，谁也不能否认他在艺术的惊人成就与才华。于国家，昏庸无能，作为一国之主，身负重任，却不务正业。人们总是向往一种完全不同的人生，大风大浪羡慕安宁平静，平淡无奇追求矫情曲折，但事实总逃不过一句“无可奈何”，其实就是逃脱不了神安排的命运，李煜是，赵佶亦是如此。
+  众人听了，方才恍然。到得次日，羿和逢蒙就率领众兵士回去向陶唐侯覆命报捷去了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  那三个坏人接了捷报，又要出什么坏主意呢？
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  （待续）
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -682,13 +703,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/926305.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/948936.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/948936.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/948936.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/07/948936.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/926305.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/948936.md' width='0px' height='0px'/>
