同步于: 12月7日10时52分

--- a/pages/nf4514/n12599095.md
+++ b/pages/nf4514/n12599095.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.6】蓬佩奥：大选是舞弊和骗局" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229567352-600x400.jpg"/>
+<div><img alt="【大选更新12.6】白宫：全美存在统计异常" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1228328133-600x400.jpg"/>
 <div class="caption">
- 图为2020年11月10日，美国国务卿蓬佩奥在新闻发布会上发言。(JACQUELYN MARTIN/POOL/AFP via Getty Images)
+ 白宫发言人、川普竞选团队顾问凯莉·麦克纳尼（Kayleigh McEnany）。(SAUL LOEB/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
