--- a/pages/nsc412/n12599095.md
+++ b/pages/nsc412/n12599095.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.6】蓬佩奥：大选是舞弊和骗局" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229567352-600x400.jpg"/>
+<div><img alt="【大选更新12.6】白宫：全美存在统计异常" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1228328133-600x400.jpg"/>
 <div class="caption">
- 图为2020年11月10日，美国国务卿蓬佩奥在新闻发布会上发言。(JACQUELYN MARTIN/POOL/AFP via Getty Images)
+ 白宫发言人、川普竞选团队顾问凯莉·麦克纳尼（Kayleigh McEnany）。(SAUL LOEB/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -117,7 +117,7 @@
    川普竞选经理：朱利安尼永久改变了纽约市
   </h3>
   <p>
-   川普2020年竞选团队经理杰森·米勒（Jason Miller）周日下文在得知朱利安尼中共病毒测试呈阳性后，发文说朱利安尼
+   川普2020年竞选团队经理杰森·米勒（Jason Miller）周日下午在得知朱利安尼中共病毒测试呈阳性后，发文说朱利安尼
   </p>
   <p>
    “鲁迪·朱利安尼市长是最棒的（the Greatest Of All Time）。他是他的时代的艾略特·内斯（Eliot Ness）。他永久改变了纽约市，改善了数百万人的生活。他是在9/11之后将国家凝聚在一起的具有团结力的人。他是川普忠实盟友和“让美国再次伟大”（MAGA）的中坚力量。
@@ -918,6 +918,8 @@
      <p>
       责任编辑：李玲
      </p>
+     <div id="xunlei_com_thunder_helper_plugin_d462f475-c18e-46be-bd10-327458d045bd">
+     </div>
     </p>
    </p>
   </p>
