--- a/pages/p8/954748.md
+++ b/pages/p8/954748.md
@@ -1,4 +1,4 @@
-### 隐性加息：中国十年期国债收益率超3.2%(图)
+### 个性四季皆异的“台湾茶”(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,112 +6,113 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p>
-  【看中国2020年10月12日讯】10月9日，
-  <span href="https://www.secretchina.com/news/gb/tag/人民币" target="_blank">
-   人民币
-  </span>
-  汇率开盘暴涨，一度突破6.7。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
+ <p style="text-align: center;">
+  <img alt="台湾 茶 春茶 夏茶" src="https://img3.secretchina.com/pic/2020/9-8/p2771762a909705304-ss.jpg"/>
+  <br>
+   个性四季皆异的“台湾茶”。（示意图／图片来源：Adobestock）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  而人民币汇率升值的一大驱动因素就是中国国债加息，10月9日，中国
-  <span href="https://www.secretchina.com/news/gb/tag/国债收益率" target="_blank">
-   国债收益率
-  </span>
-  突破3.2%，反超疫情之前，已经制造了隐性加息效果。
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/茶" target="_blank">
+    茶
+   </span>
+   的个性四季皆异
+  </strong>
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
+ <p>
+  日照时间或降雨量、气温或湿度的变化随着四季更迭，持续影响各种生物的生长。古时中国的农民历为掌握季节的变换，将一年分为二十四节气
+  <span style="color:#ff0000">
+   <sup>
+    注1
+   </sup>
+  </span>
+  ，
+  <strong>
+   茶
+  </strong>
+  是农作物之一，栽培也遵循农民历。
+ </p>
+ <p>
+  <strong>
+   台湾
+  </strong>
+  属于亚热带气候，几乎全年都能种茶，但季节的变化使茶产生差异。
+ </p>
+ <p>
+  例如采茶季节的雨量过多，茶味会变淡，因为寒冷导致生长缓慢，茶味就会变浓，季节或天候造就茶的个性。就算是广受好评的
+  <span href="https://www.secretchina.com/news/gb/tag/春茶" target="_blank">
+   春茶
+  </span>
+  ，早春茶与晚春茶的香气与滋味还是不太一样。想品尝美味的茶，了解季节与茶的个性很重要。
+ </p>
+ <p>
+  夏至一阴生，是以天时渐短；冬至一阳生，是以日晷初长。
+ </p>
  <p style="text-align: center;">
-  <img alt="近期人民币汇率日K线走势一览" src="https://img3.secretchina.com/pic/2020/10-12/p2794441a720223125-ss.jpg" style="height:500px; width:600px"/>
+  <img alt="夏至一阴生，是以天时渐短；冬至一阳生，是以日晷初长。" src="https://img3.secretchina.com/pic/2020/12-4/p2831961a204593470-ss.jpg"/>
   <br>
-   近期人民币汇率日K线走势一览（网络图片）
+   夏至一阴生，是以天时渐短；冬至一阳生，是以日晷初长。（图片来源：采实文化提供）
   </br>
  </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p>
-  加息，总是会有利于
-  <span href="https://www.secretchina.com/news/gb/tag/汇率" target="_blank">
-   汇率
+  <strong>
+   注1.二十四节气：自古以来人们认为万物的变化是季节变迁或循环所致。为了正确判断季节的变迁，农民历的推算特别重视冬至。测量太阳影子的长度，决定冬至的日期时间后，和前年冬至的日期时间相比，从两者的差异决定太阳年（回归年）的长度。将此分为二十四等分，每等分约十五日，给予命名，称为二十四节气。
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <span href="https://zh.wikipedia.org/wiki/%E5%A4%8F%E8%87%B3">
+   夏至
   </span>
-  升值的。
- </p>
- <p>
-  <strong>
-   一 驱动因素
-  </strong>
- </p>
- <p>
-  人民币升值动力有市场因素和非市场因素，但近期人民币升值的主要驱动因素是市场因素。
- </p>
- <p>
-  1）美元宽松预期升温，避险情绪衰退，美元外流。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  2）从美元指数来看，美元指数较节前下挫，且目前仍在较快下挫，驱动人民币升值。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  3）
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
+  阳气最重的时候开始转阴，
+  <span href="https://zh.wikipedia.org/wiki/%E5%86%AC%E8%87%B3">
+   冬至
   </span>
-  十年国债收益率今日开盘较节前大涨约5基点。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  美元宽松预期升温，避险情绪有所消退，刺激美元外流。而人民币近期相对美元连续升值，中美货币之间有接近250基点的息差，息差、汇差共同驱动套利流入，流入资金结汇影响人民币升值。
+  阴气最重的时候开始转阳。所谓物极必反，事情的转机往往就是在最极端的时候出现。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -127,7 +128,7 @@
  </center>
  <p>
   <strong>
-   二 新不可能三角
+   ●春茶
   </strong>
  </p>
  <center>
@@ -143,7 +144,7 @@
   </div>
  </center>
  <p>
-  美元当前已经形成了一个新的不可能三角，即美债收益率下跌、美元指数下跌和美国股市上涨无法同时实现。
+  台湾农民历中，最初在田中灌水的季节（二月初至五月初）称为头水，在这段期间采的茶就是春茶。春茶俗称头水茶，相当于日本的一番茶。春茶是一年之中收成量最多的茶，人们在这段期间脱去厚重冬衣，让皮肤更加透气、充满精气。春茶的特征是香气清新，喝起来顺口甘甜。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -158,7 +159,11 @@
   </div>
  </center>
  <p>
-  1）美债收益率和美元指数任一要素上涨，都可以稳定美元资金减少外流，从而有能力驱动美股上涨（水牛市）。
+  平地的一般春茶多是在三月底至四月初采收，四月中旬左右上市贩售。年轻的健康茶树在这个季节四十五∼五十天就能采茶，所以五月中旬至下旬仍可采收春茶。不过这时候的茶是晚春茶，香气弱且苦味强，具有
+  <span href="https://www.secretchina.com/news/gb/tag/夏茶" target="_blank">
+   夏茶
+  </span>
+  的特征。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +178,7 @@
   </div>
  </center>
  <p>
-  2）美债收益率和美元指数同时走跌则会加速驱动资金外流，诱导美股崩塌。
+  若是降霜期长的高山，采茶则是每年一∼三次，收成量也有限，这点必须留意。高山的春茶在立夏（五月上旬）之后，从海拔低的产地依序采收。待冻顶山和阿里山采收完后，终于轮到梨山的春茶采收期。五月下旬至六月买到的梨山春茶才会是真货。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,38 +192,11 @@
    </center>
   </div>
  </center>
- <p>
-  3）假如美股崩塌，恐慌情绪会带动资金避险，从而驱动美元指数上涨。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  以上原因导致三者无法同时实现（极短期资金流动效果尚未体现出来的话，则有可能会同时实现）。中国国庆期间，美元指数有所下跌，美股总体上有所上涨，但美债收益率攀涨约13个基点。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不可能三角关系得到体现。
+ <p style="text-align: center;">
+  <img alt="春茶俗称头水茶，相当于日本的一番茶。" src="https://img3.secretchina.com/pic/2020/8-29/p2764792a636985119-ss.jpg"/>
+  <br>
+   春茶俗称头水茶，相当于日本的一番茶。（示意图／图片来源：Adobestock）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -234,7 +212,7 @@
  </center>
  <p>
   <strong>
-   三 面对新不可能三角，中国的选项
+   ●夏茶
   </strong>
  </p>
  <center>
@@ -250,7 +228,130 @@
   </div>
  </center>
  <p>
-  目前中美之间仍需维持一个相对稳定的息差来平衡中国国际收支，美元的选择较为主动，而人民币需要根据美元的变动及时调整。
+  立夏过后，小满到芒种这段期间采收的茶称为头水夏，夏至之后采收的夏茶称为二水夏。气温高、日照时间长的夏季，茶芽生长速度极快，因此立夏至处暑的三个月内就能采两次茶。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  夏茶的茶叶色深，叶体薄且硬。气温上升，紫外线会变强，所以茶的香气或鲜味弱，涩味或苦味增加。除了
+  <span href="https://zh.wikipedia.org/wiki/%E6%9D%B1%E6%96%B9%E7%BE%8E%E4%BA%BA%E8%8C%B6">
+   东方美人茶
+  </span>
+  <span style="color:#ff0000">
+   <sup>
+    注2
+   </sup>
+  </span>
+  等特殊茶外，夏茶通常是制成廉价的业务用茶或当作罐装饮料的原料。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  一般夏茶的价格是春茶的一半，低价卖出用于加工之外，有些茶农不采茶，连同树枝一起剪下当成茶树的肥料。这是保护茶树延长寿命的方法。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   注2.东方美人茶：只采芒种前后大量出现的浮尘子啃咬过的茶叶制成的高级茶。
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在海拔一千两百公尺以上采收的高山夏茶也有采与不采的情况。但高山夏茶可以卖到茶铺，一般夏茶则无法。成本高于平地茶的高山茶不适合廉价的加工。若是没有标明采茶季节的高山茶，可能是夏茶或秋茶，或是两者的混茶。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  撇开价格的问题，无法成为高级茶的夏茶并非毫无价值。盛夏时节摄取苦味强的食物有益健康，能够消除体内暑气。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  自古以来，中国人为了养生保健，饮食上会留意阴阳调和。在
+  <span href="https://zh.wikipedia.org/wiki/%E4%B8%AD%E5%8C%BB%E5%AD%A6">
+   中医
+  </span>
+  的观点，温性（阳）或凉性（阴）与食材的颜色或味道有关，茶也不外乎如此，寒色系的茶偏苦，属凉性；暖色系的茶甘甜，属温性。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align: center;">
+  <img alt="寒色系的茶偏苦，属凉性；暖色系的茶甘甜，属温性。" src="https://img3.secretchina.com/pic/2020/8-19/p2758252a156081858-ss.jpg" style="height:337px; width:600px"/>
+  <br>
+   寒色系的茶偏苦，属凉性；暖色系的茶甘甜，属温性。（示意图／图片来源：Adobestock）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -269,7 +370,9 @@
   </ins>
  </center>
  <p>
-  对于美元新不可能三角选项，中国在平衡国际收支时有如下调整方向；
+  <strong>
+   ●秋茶
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -284,7 +387,7 @@
   </div>
  </center>
  <p>
-  1）美股稳定情况下，美债收益率上涨，美元指数下跌，中美息差可适度缩窄，中国国债收益率需小幅跟涨。
+  介于春茶、冬茶与夏茶之间的秋茶，苦甜适中。经过了春夏的采茶后，储存在秋茶内的营养物质已经减少。因此秋茶的新芽大小不一，味道显得平淡。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -299,7 +402,7 @@
   </div>
  </center>
  <p>
-  2）美股稳定情况下，美元指数上涨，美债收益率下跌。中美息差需适度走阔，中国国债收益率无法跟随美债下跌（或小幅跟随）。
+  不过，秋茶也和春茶一样，依采茶季节会产生不同的个性。九月上旬至下旬采收的早秋茶，香气弱且残留涩味。尽管秋天已是十月底，在台湾仍持续着夏季的暑气，所以茶也保有夏茶的个性。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -314,7 +417,7 @@
   </div>
  </center>
  <p>
-  3）美股下挫情况下，恐慌指数升高，资金避险情绪高涨（这种情况一般会驱动美指上扬，美债收益率下跌），中美息差需加速走阔，才能抑制资金外流，中国国债收益率需逆势走高。
+  霜降（十月下旬）之后采收的晚秋茶，香气与鲜味成分慢慢增加变得美味。随着东北季风南下气温下降，茶叶生长趋缓，成为滋味浓厚的茶。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -329,7 +432,7 @@
   </div>
  </center>
  <p>
-  显然，三个选项中几乎无法找到降息（国债收益率下跌）路径。
+  梨山等高山茶因为夏茶的采收期短，不同于春茶较晚采收，秋茶的采收时期会提前。大概九月中旬至下旬就能买到梨山的秋茶。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -344,7 +447,9 @@
   </div>
  </center>
  <p>
-  而目前，美元显然处于选项1情形之下，美债收益率迅速攀涨驱动中债收益率小幅跟涨（美债收益率攀涨13基点，中债收益率跟涨5基点），进而十年中债收益率突破3.2%。
+  <strong>
+   ●冬茶
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -359,7 +464,7 @@
   </div>
  </center>
  <p>
-  而十年国债收益率是一切资产定价的基石，中国国债收益率突破3.2%反超疫情之前，这必将施压所有的风险资产。
+  茶叶接触到寒气后，叶体增厚，储存大量的成分。冬茶3是在立冬前后开始采收，随着天气变寒冷，真正美味的时节是在十二月左右。台湾位处亚热带，因此高山以外的地区几乎全年都能采茶，冬茶之中又以正月至农民历新年采收的冬片最为甘甜芳醇、少刺激。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -374,7 +479,45 @@
   </div>
  </center>
  <p>
-  影响将迅速浮出水面！……
+  冬片是冬茶采收后的初萌嫩芽。由于茶树年轻，在海拔过高的产地无法采收。每年的气候会左右冬片的收获有无，在珍贵的冬茶之中不到百分之五，犹如至宝。台湾茶饕总会寻找冬片，因为他们知道这个时期的茶柔软甘甜。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  高山茶的冬茶是在十一月中旬至下旬上市。但采收前遇到降霜就无法制茶，所以每年没有固定的采收季节和产量。
+  <br>
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   本文整理、节录自池上麻由子《
+   <span href="https://www.books.com.tw/products/0010870631">
+    穷究台湾茶：如何选购、享受台湾茶
+   </span>
+   》一书，文章仅代表作者个人立场和观点。由采实文化授权转载，欲阅读完整作品，欢迎参考原书。
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -406,7 +549,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -438,13 +581,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948945.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948945.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948945.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/12/948945.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954748.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954748.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954748.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/07/954748.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948945.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/954748.md' width='0px' height='0px'/>
