同步于: 12月7日11时2分

--- a/pages/nf4514/n12599095.md
+++ b/pages/nf4514/n12599095.md
@@ -117,7 +117,7 @@
    川普竞选经理：朱利安尼永久改变了纽约市
   </h3>
   <p>
-   川普2020年竞选团队经理杰森·米勒（Jason Miller）周日下文在得知朱利安尼中共病毒测试呈阳性后，发文说朱利安尼
+   川普2020年竞选团队经理杰森·米勒（Jason Miller）周日下午在得知朱利安尼中共病毒测试呈阳性后，发文说朱利安尼
   </p>
   <p>
    “鲁迪·朱利安尼市长是最棒的（the Greatest Of All Time）。他是他的时代的艾略特·内斯（Eliot Ness）。他永久改变了纽约市，改善了数百万人的生活。他是在9/11之后将国家凝聚在一起的具有团结力的人。他是川普忠实盟友和“让美国再次伟大”（MAGA）的中坚力量。
@@ -918,6 +918,8 @@
      <p>
       责任编辑：李玲
      </p>
+     <div id="xunlei_com_thunder_helper_plugin_d462f475-c18e-46be-bd10-327458d045bd">
+     </div>
     </p>
    </p>
   </p>
