--- a/pages/nsc418/n12599095.md
+++ b/pages/nsc418/n12599095.md
@@ -59,6 +59,8 @@
  情况的实时更新：
 </h4>
 <h3>
+</h3>
+<h3>
  川普律师埃利斯：朱利安尼是一名坚强的战士
 </h3>
 <p>
@@ -96,7 +98,7 @@
   川普竞选经理：朱利安尼永久改变了纽约市
  </h3>
  <p>
-  川普2020年竞选团队经理杰森·米勒（Jason Miller）周日下午在得知朱利安尼中共病毒测试呈阳性后，发文说朱利安尼
+  川普2020年竞选团队经理杰森·米勒（Jason Miller）周日下文在得知朱利安尼中共病毒测试呈阳性后，发文说朱利安尼
  </p>
  <p>
   “鲁迪·朱利安尼市长是最棒的（the Greatest Of All Time）。他是他的时代的艾略特·内斯（Eliot Ness）。他永久改变了纽约市，改善了数百万人的生活。他是在9/11之后将国家凝聚在一起的具有团结力的人。他是川普忠实盟友和“让美国再次伟大”（MAGA）的中坚力量。
@@ -145,7 +147,7 @@
    朱利安尼曾是共和党的温和派。最初担任联邦检察官，起诉了许多高知名度的犯罪集团首脑。他接着在1994年至2001年间担任8年纽约市市长，于市长任内致力于降低犯罪率并改善城市生活的品质。在世界贸易中心遭受恐怖攻击的九一一事件期间，担任市长的朱利安尼以他突出的坐镇领导能力而闻名全球。使他被《时代》杂志列为2001年的年度风云人物，并且从伊莉莎白二世女王获得KBE勋衔。在911事件中的指挥表现还使他获得了“美国市长”的绰号。
   </p>
   <h3>
-   麦肯纳尼：统计异常现象全国都存在
+   白宫：全美存在统计异常
   </h3>
   <p>
    白宫新闻秘书、川普2020竞选顾问凯莉·麦肯纳尼（Kayleigh McEnany）周日发文说统计异常现象全国都存在。
@@ -183,8 +185,6 @@
    </p>
   </blockquote>
   <p>
-   <h3>
-   </h3>
    <h3>
     川普乔州助选：这是美国史上最重要国会决选
    </h3>
@@ -897,8 +897,6 @@
     <p>
      责任编辑：李玲
     </p>
-    <div id="xunlei_com_thunder_helper_plugin_d462f475-c18e-46be-bd10-327458d045bd">
-    </div>
    </p>
   </p>
  </p>
